--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,4 +22,10 @@
         android:layout_height="wrap_content"
         android:onClick="showChapter2"
         android:text="Chapter2" />
+
+    <android.support.v7.widget.AppCompatButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="showChapter3"
+        android:text="Chapter3" />
 </LinearLayout>
