--- a/app/src/main/res/layout/activity_animator.xml
+++ b/app/src/main/res/layout/activity_animator.xml
@@ -1,31 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
     tools:context="com.example.artofandroiddev.chapter3.AnimatorActivity">
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="交换位置"
-        android:onClick="exchangePos"/>
+        android:onClick="exchangePos"
+        android:text="交换位置" />
+
     <com.example.artofandroiddev.chapter3.velocity.TrackerView
         android:id="@+id/tckv_animator_1"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginStart="200dp"
         android:layout_marginLeft="200dp"
-        android:background="@android:color/holo_orange_light"/>
+        android:layout_marginStart="200dp"
+        app:circleColor="@android:color/holo_orange_light" />
+
     <com.example.artofandroiddev.chapter3.velocity.TrackerView
         android:id="@+id/tckv_animator_2"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginStart="200dp"
         android:layout_marginLeft="200dp"
-        android:layout_marginTop="200dp"/>
+        android:layout_marginStart="200dp"
+        android:layout_marginTop="200dp"
+        app:circleColor="@android:color/holo_blue_light" />
 </LinearLayout>
