追加第四章部分代码，自定义圆角ImageView

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,4 +28,10 @@
         android:layout_height="wrap_content"
         android:onClick="showChapter3"
         android:text="Chapter3" />
+
+    <android.support.v7.widget.AppCompatButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="showChapter4"
+        android:text="Chapter4" />
 </LinearLayout>
