--- a/app/src/main/res/layout/activity_chapter4_main.xml
+++ b/app/src/main/res/layout/activity_chapter4_main.xml
@@ -15,5 +15,19 @@
         android:layout_height="wrap_content"
         android:onClick="showCircularImageViewActivity"
         android:text="圆角ImageView" />
-
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="showFlowLayoutActivity"
+        android:text="FlowLayout" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="showAdjustViewBoundsActivity"
+        android:text="AdjustViewBounds" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="showFocusChangedActivity"
+        android:text="测试FocusChanged" />
 </LinearLayout>
