第6章Drawable的自定义Spinner代码和第7章动画的代码

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,4 +34,10 @@
         android:layout_height="wrap_content"
         android:onClick="showChapter4"
         android:text="Chapter4" />
+
+    <android.support.v7.widget.AppCompatButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="showChapter6"
+        android:text="Chapter6" />
 </LinearLayout>
